feat: add terraform destroy action to makefile

--- a/image/.env
+++ b/image/.env
@@ -1,2 +1,9 @@
-DIFFICULTY=hard
+VERSION=1.16.5
 EULA=TRUE
+
+DIFFICULTY=hard
+
+ENABLE_AUTOPAUSE=TRUE
+MAX_TICK_TIME=-1
+AUTOPAUSE_TIMEOUT_INIT=2
+AUTOPAUSE_TIMEOUT_EST=2
